tests/ui/rfc-2627-raw-dylib/link-ordinal-and-name.stderr
error: cannot use `#[link_name]` with `#[link_ordinal]`
  --> $DIR/link-ordinal-and-name.rs:4:5
   |
LL |     #[link_ordinal(42)]
   |     ^^^^^^^^^^^^^^^^^^^

error: cannot use `#[link_name]` with `#[link_ordinal]`
  --> $DIR/link-ordinal-and-name.rs:8:5
   |
LL |     #[link_ordinal(5)]
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

